--- a/base/index.html
+++ b/base/index.html
@@ -9,7 +9,7 @@
             自适应手机-平板-PC
             基本静态网站模板
         </title>
-        <!-- version "1.4.9.10 build 20171017.212444" -->
+        <!-- version "1.5.0.1 build 20180227.010453" -->
         <meta name="keywords" content="批处理,全文搜索,人工翻译,工业4.0,大数据,PLM,ERP,SEO">
         <meta name="description" content="专业研发、设计、部署、销售 _ 全数字化企业管理平台 / 高仿真数字样机 / 批处理 / 全文搜索 / 人工翻译 / 工业4.0 / 大数据 / PLM / ERP / SEO _ 版权所有 (c) 2017 广州市德云数科技有限公司">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -549,9 +549,9 @@
                     </div>
                     <div class="row">
                         <p style="font-size:10px;text-align:center;color:#7d7d7d;">
-                            版权所有&nbsp;&copy;&nbsp;2017
-                            <a target="_blank" href="http://dts.digitser.cn/" style="color:#7d7d7d;">
-                                广州市德云数科技有限公司
+                            版权所有&nbsp;&copy;&nbsp;2014-2018
+                            <a target="_blank" href="http://dts.digitser.cn/zh-CN.html" style="color:#7d7d7d;">
+                                德云社区
                             </a>
                         </p>
                         <p style="font-size:10px;text-align:center;color:#7d7d7d;">
