--- a/orange-red/en-US.html
+++ b/orange-red/en-US.html
@@ -9,7 +9,7 @@
             Adaptive Mobile-Tablet-PC
             Orange-red Static Website Template
         </title>
-        <!-- version "1.4.9.4 build 20171017.212444" -->
+        <!-- version "1.5.0.1 build 20180227.010842" -->
         <meta name="keywords" content="Batch,Full text search,Manual translate,Industry 4.0,Big data,PLM,ERP,SEO">
         <meta name="description" content="Professional research and development, design, deployment, sales _ full digital enterprise management platform / high simulation digital prototype / batch / full text search / manual translation / industry 4.0 / big data / PLM / ERP / SEO _ Copyright (c) 2017 China Guangzhou Digits Cloud Technology Co., Ltd.">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -202,18 +202,18 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="row">
-                            <a class="btn btn-primary" target="_blank" style="color:#5b5b5b;text-align:center;width:90px;margin-top:5px;background:#ff552d;border:0px;border-radius:3px;" href="index.html">
-                                简体中文
-                            </a>
-                            <a class="btn btn-primary" target="_blank" style="color:#5b5b5b;text-align:center;width:90px;margin-top:5px;background:#ff552d;border:0px;border-radius:3px;" href="zh-TW.html">
-                                繁體中文
-                            </a>
-                            <a class="btn btn-primary" target="_blank" style="color:#5b5b5b;text-align:center;width:90px;margin-top:5px;background:#ff552d;border:0px;border-radius:3px;" href="en-US.html">
-                                English
-                            </a>
-                        </div>
+                    <div class="col-md-3" style="padding-top:10px;text-align:right;">
+                        <a target="_blank" href="zh-CN.html" style="color:#5b5b5b;">
+                            简体中文
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a target="_blank" href="zh-TW.html" style="color:#5b5b5b;">
+                            繁體中文
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a target="_blank" href="en-US.html" style="color:#5b5b5b;">
+                            English
+                        </a>
                     </div>
                 </div>
             </div>
