--- a/base/zh-TW/about.html
+++ b/base/zh-TW/about.html
@@ -7,7 +7,7 @@
         <title>
             關於
         </title>
-        <!-- version "0.8.9.9 build 20171017.212444" -->
+        <!-- version "0.9.0.1 build 20180227.011054" -->
         <meta name="keywords" content="批處理,全文搜索,人工翻譯,工業4.0,大數據,PLM,ERP,SEO">
         <meta name="description" content="專業研發、設計、部署、銷售 _ 全數字化企業管理平颱 / 高仿真數字樣機 / 批處理 / 全文搜索 / 人工翻譯 / 工業4.0 / 大數據 / PLM / ERP / SEO _ 版權所有 (c) 2017 廣州市德雲數科技有限公司">
         <link rel="icon" href="../images/favicon.png" type="image/png" />
@@ -505,9 +505,9 @@
                     </div>
                     <div class="row">
                         <p style="font-size:10px;text-align:center;color:#7d7d7d;">
-                            版權所有&nbsp;&copy;&nbsp;2017
-                            <a target="_blank" href="http://dts.digitser.cn/" style="color:#7d7d7d;">
-                                廣州市德雲數科技有限公司
+                            版權所有&nbsp;&copy;&nbsp;2014-2018
+                            <a target="_blank" href="http://dts.digitser.cn/zh-TW.html" style="color:#7d7d7d;">
+                                德雲社區
                             </a>
                         </p>
                         <p style="font-size:10px;text-align:center;color:#7d7d7d;">
