--- a/orange-red/en-US.html
+++ b/orange-red/en-US.html
@@ -9,7 +9,7 @@
             Adaptive Mobile-Tablet-PC
             Orange-red Static Website Template
         </title>
-        <!-- version "1.5.0.1 build 20180227.010842" -->
+        <!-- version "1.5.0.2 build 20180227.011251" -->
         <meta name="keywords" content="Batch,Full text search,Manual translate,Industry 4.0,Big data,PLM,ERP,SEO">
         <meta name="description" content="Professional research and development, design, deployment, sales _ full digital enterprise management platform / high simulation digital prototype / batch / full text search / manual translation / industry 4.0 / big data / PLM / ERP / SEO _ Copyright (c) 2017 China Guangzhou Digits Cloud Technology Co., Ltd.">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -549,9 +549,9 @@
                     </div>
                     <div class="row">
                         <p style="font-size:10px;text-align:center;color:#7d7d7d;">
-                            Copyright&nbsp;&copy;&nbsp;2017
-                            <a target="_blank" href="http://dts.digitser.cn/" style="color:#7d7d7d;">
-                                China Guangzhou Digits Cloud Technology Co., Ltd.
+                            Copyright&nbsp;&copy;&nbsp;2014-2018
+                            <a target="_blank" href="http://dts.digitser.cn/en-US.html" style="color:#7d7d7d;">
+                                Digits Cloud Community
                             </a>
                         </p>
                         <p style="font-size:10px;text-align:center;color:#7d7d7d;">
