--- a/base/zh-TW.html
+++ b/base/zh-TW.html
@@ -549,6 +549,7 @@
                     </div>
                     <div class="row">
                         <p style="font-size:10px;text-align:center;color:#7d7d7d;">
+                            版權所有&nbsp;&copy;&nbsp;2014-2018
                             <a target="_blank" href="http://dts.digitser.cn/zh-TW.html" style="color:#7d7d7d;">
                                 德雲社區
                             </a>
