--- a/base/index.html
+++ b/base/index.html
@@ -9,7 +9,7 @@
             自适应手机-平板-PC
             基本静态网站模板
         </title>
-        <!-- version "1.5.0.1 build 20180227.010453" -->
+        <!-- version "1.5.0.2 build 20180227.011552" -->
         <meta name="keywords" content="批处理,全文搜索,人工翻译,工业4.0,大数据,PLM,ERP,SEO">
         <meta name="description" content="专业研发、设计、部署、销售 _ 全数字化企业管理平台 / 高仿真数字样机 / 批处理 / 全文搜索 / 人工翻译 / 工业4.0 / 大数据 / PLM / ERP / SEO _ 版权所有 (c) 2017 广州市德云数科技有限公司">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -202,18 +202,18 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="row">
-                            <a class="btn btn-primary" target="_blank" style="color:#7d7d7d;text-align:center;width:90px;margin-top:5px;background:#f8f8f8;border:0px;border-radius:3px;" href="index.html">
-                                简体中文
-                            </a>
-                            <a class="btn btn-primary" target="_blank" style="color:#7d7d7d;text-align:center;width:90px;margin-top:5px;background:#f8f8f8;border:0px;border-radius:3px;" href="zh-TW.html">
-                                繁體中文
-                            </a>
-                            <a class="btn btn-primary" target="_blank" style="color:#7d7d7d;text-align:center;width:90px;margin-top:5px;background:#f8f8f8;border:0px;border-radius:3px;" href="en-US.html">
-                                English
-                            </a>
-                        </div>
+                    <div class="col-md-3" style="padding-top:10px;text-align:right;">
+                        <a target="_blank" href="zh-CN.html" style="color:#5b5b5b;">
+                            简体中文
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a target="_blank" href="zh-TW.html" style="color:#5b5b5b;">
+                            繁體中文
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a target="_blank" href="en-US.html" style="color:#5b5b5b;">
+                            English
+                        </a>
                     </div>
                 </div>
             </div>
