--- a/base/en-US.html
+++ b/base/en-US.html
@@ -9,7 +9,7 @@
             Adaptive Mobile-Tablet-PC
             Basic Static Website Template
         </title>
-        <!-- version "1.5.0.2 build 20180227.011552" -->
+        <!-- version "1.5.0.3 build 20180227.013701" -->
         <meta name="keywords" content="Batch,Full text search,Manual translate,Industry 4.0,Big data,PLM,ERP,SEO">
         <meta name="description" content="Professional research and development, design, deployment, sales _ full digital enterprise management platform / high simulation digital prototype / batch / full text search / manual translation / industry 4.0 / big data / PLM / ERP / SEO _ Copyright (c) 2017 China Guangzhou Digits Cloud Technology Co., Ltd.">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -248,7 +248,9 @@
                                 </a>
                                 <p style="text-align:center;font-size:18px;">
                                     <a target="_blank" href="http://dts.digitser.cn/en-US/product/app/translate.html">
-                                         <b>5.2.4.18 build 20171001.160156</b>
+                                        <b>
+                                            5.2.4.18 build 20171001.160156
+                                        </b>
                                     </a>
                                 </p>
                                 <p style="text-align:center;font-family:'微软雅黑';font-size:13px;color:#7d7d7d;">
