--- a/base/index.html
+++ b/base/index.html
@@ -9,7 +9,7 @@
             自适应手机-平板-PC
             基本静态网站模板
         </title>
-        <!-- version "1.5.0.2 build 20180227.011552" -->
+        <!-- version "1.5.0.3 build 20180227.013701" -->
         <meta name="keywords" content="批处理,全文搜索,人工翻译,工业4.0,大数据,PLM,ERP,SEO">
         <meta name="description" content="专业研发、设计、部署、销售 _ 全数字化企业管理平台 / 高仿真数字样机 / 批处理 / 全文搜索 / 人工翻译 / 工业4.0 / 大数据 / PLM / ERP / SEO _ 版权所有 (c) 2017 广州市德云数科技有限公司">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -248,7 +248,9 @@
                                 </a>
                                 <p style="text-align:center;font-size:18px;">
                                     <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/translate.html">
-                                         <b>5.2.4.18 build 20171001.160156</b>
+                                        <b>
+                                            5.2.4.18 build 20171001.160156
+                                        </b>
                                     </a>
                                 </p>
                                 <p style="text-align:center;font-family:'微软雅黑';font-size:13px;color:#7d7d7d;">
