--- a/orange-red/zh-TW.html
+++ b/orange-red/zh-TW.html
@@ -9,7 +9,7 @@
             自適應手機-平闆-PC
             橙紅靜態網站模闆
         </title>
-        <!-- version "1.5.0.2 build 20180227.011054" -->
+        <!-- version "1.5.0.5 build 20180227.013701" -->
         <meta name="keywords" content="批處理,全文搜索,人工翻譯,工業4.0,大數據,PLM,ERP,SEO">
         <meta name="description" content="專業研發、設計、部署、銷售 _ 全數字化企業管理平颱 / 高仿真數字樣機 / 批處理 / 全文搜索 / 人工翻譯 / 工業4.0 / 大數據 / PLM / ERP / SEO _ 版權所有 (c) 2017 廣州市德雲數科技有限公司">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -27,27 +27,24 @@
         <div class="navbar navbar-default navbar-static-top" style="font-family:'微软雅黑';background:#ff552d;">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-9">
-                        <a target="_blank" href="http://dts.digitser.cn/">
-                            <img src="images/logo.png" class="img-responsive" style="max-height:105px;"
-                            alt="廣州市德雲數科技有限公司 Log" title="點這裏進入官網首頁">
+                    <div class="col-md-8">
+                        <a target="_blank" href="http://dts.digitser.cn/zh-TW.html">
+                            <img class="img-responsive" src="images/logo.png" style="min-width:208px;"
+                            alt="德雲社區 Log" title="點這裏進入官網首頁">
                         </a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-9"></div>
-                    <div class="col-md-3">
-                        <div class="row">
-                            <a class="btn btn-primary" target="_blank" style="font-size:12px;color:#5b5b5b;text-align:center;width:90px;margin-top:0px;background:#ff552d;border:0px;border-radius:3px;" href="http://help.digitser.cn/zh-TW.html">
-                                數據資料
-                            </a>
-                            <a class="btn btn-primary" style="font-size:12px;color:#5b5b5b;text-align:center;width:90px;margin-top:0px;background:#ff552d;border:0px;border-radius:3px;" href="##">
-                                注冊
-                            </a>
-                            <a class="btn btn-primary" style="font-size:12px;color:#5b5b5b;text-align:center;width:90px;margin-top:0px;background:#ff552d;border:0px;border-radius:3px;" href="##">
-                                登錄
-                            </a>
-                        </div>
+                    <div class="col-md-4" style="padding-top:8px;text-align:right;">
+                        <a target="_blank" href="https://pan.baidu.com/s/1dGxcM7R" style="color:#655753;">
+                            百度網盤
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="##" style="color:#655753;">
+                            注冊
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="##" style="color:#655753;">
+                            登錄
+                        </a>
                     </div>
                 </div>
                 <div class="row">
@@ -248,7 +245,9 @@
                                 </a>
                                 <p style="text-align:center;font-size:18px;">
                                     <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/translate.html">
-                                         <b>5.2.4.18 build 20171001.160156</b>
+                                        <b>
+                                            5.2.4.18 build 20171001.160156
+                                        </b>
                                     </a>
                                 </p>
                                 <p style="text-align:center;font-family:'微软雅黑';font-size:13px;color:#7d7d7d;">
