--- a/orange-red/en-US.html
+++ b/orange-red/en-US.html
@@ -9,7 +9,7 @@
             Adaptive Mobile-Tablet-PC
             Orange-red Static Website Template
         </title>
-        <!-- version "1.5.0.3 build 20180227.013701" -->
+        <!-- version "1.5.0.8 build 20180227.014528" -->
         <meta name="keywords" content="Batch,Full text search,Manual translate,Industry 4.0,Big data,PLM,ERP,SEO">
         <meta name="description" content="Professional research and development, design, deployment, sales _ full digital enterprise management platform / high simulation digital prototype / batch / full text search / manual translation / industry 4.0 / big data / PLM / ERP / SEO _ Copyright (c) 2017 China Guangzhou Digits Cloud Technology Co., Ltd.">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -27,27 +27,24 @@
         <div class="navbar navbar-default navbar-static-top" style="font-family:'微软雅黑';background:#ff552d;">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-9">
-                        <a target="_blank" href="http://dts.digitser.cn/">
-                            <img src="images/logo.png" class="img-responsive" style="max-height:105px;"
-                            alt="China Guangzhou Digits Cloud Technology Co., Ltd. Log" title="Click here to enter the official website home page">
+                    <div class="col-md-8">
+                        <a target="_blank" href="http://dts.digitser.cn/en-US.html">
+                            <img class="img-responsive" src="images/logo.png" style="min-width:208px;"
+                            alt="Digits Cloud Community Log" title="Click here to enter the official website home page">
                         </a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-9"></div>
-                    <div class="col-md-3">
-                        <div class="row">
-                            <a class="btn btn-primary" target="_blank" style="font-size:12px;color:#5b5b5b;text-align:center;width:90px;margin-top:0px;background:#ff552d;border:0px;border-radius:3px;" href="http://help.digitser.cn/en-US.html">
-                                Data
-                            </a>
-                            <a class="btn btn-primary" style="font-size:12px;color:#5b5b5b;text-align:center;width:90px;margin-top:0px;background:#ff552d;border:0px;border-radius:3px;" href="##">
-                                Register
-                            </a>
-                            <a class="btn btn-primary" style="font-size:12px;color:#5b5b5b;text-align:center;width:90px;margin-top:0px;background:#ff552d;border:0px;border-radius:3px;" href="##">
-                                Sign in
-                            </a>
-                        </div>
+                    <div class="col-md-4" style="padding-top:8px;text-align:right;">
+                        <a target="_blank" href="https://pan.baidu.com/s/1dGxcM7R" style="color:#655753;">
+                            Baidu Network Disk
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="##" style="color:#655753;">
+                            Register
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="##" style="color:#655753;">
+                            Sign In
+                        </a>
                     </div>
                 </div>
                 <div class="row">
@@ -234,7 +231,9 @@
                                 </a>
                                 <p style="text-align:center;font-size:18px;">
                                     <a target="_blank" href="http://dts.digitser.cn/en-US/product/ide/ideweb.html">
-                                         <b>4.4.8.72 build 20170929.230121</b>
+                                        <b>
+                                            4.4.8.72 build 20170929.230121
+                                        </b>
                                     </a>
                                 </p>
                                 <p style="text-align:center;font-family:'微软雅黑';font-size:13px;color:#7d7d7d;">
@@ -295,21 +294,13 @@
                     <div class="thumbnail" style="font-family:'微软雅黑';padding:2px 0;border:1px solid #fff;">
                         <p></p>
                         <p style="text-indent:2em;">
-                            <a target="_blank" href="http://dts.digitser.cn/en-US.html">
-                                <b>
-                                    China Guangzhou Digits Cloud Technology Co., Ltd.
-                                </b>
-                            </a>
-                            is "China Guangzhou Digitser Machinery Co., Ltd." IT Division.
-                        </p>
-                        <p style="text-indent:2em;">
                             We not only produce hardware, but also produce software, can provide you with the complete "Industry 4.0" mature digital solutions. Maximize the efficiency of the full life cycle of enterprise products, significantly reduce operating costs, breaking your imagination with independent innovation.
                         </p>
                         <p style="text-indent:2em;">
                             Meet
-                            <a target="_blank" href="http://www.digitser.net/en-US.html">
+                            <a target="_blank" href="http://www.digitser.cn/en-US.html">
                                 <b>
-                                    "China Guangzhou Digitser Machinery Co., Ltd."
+                                    "Digits Cloud Community"
                                 </b>
                             </a>
                             needs at the same time, to provide industry 4.0 digital, IT, big data, PLM, ERP, comprehensive technical information, electrical automation services for others.
