--- a/orange-red/zh-TW.html
+++ b/orange-red/zh-TW.html
@@ -9,7 +9,7 @@
             自適應手機-平闆-PC
             橙紅靜態網站模闆
         </title>
-        <!-- version "1.5.0.5 build 20180227.013701" -->
+        <!-- version "1.5.0.8 build 20180227.014643" -->
         <meta name="keywords" content="批處理,全文搜索,人工翻譯,工業4.0,大數據,PLM,ERP,SEO">
         <meta name="description" content="專業研發、設計、部署、銷售 _ 全數字化企業管理平颱 / 高仿真數字樣機 / 批處理 / 全文搜索 / 人工翻譯 / 工業4.0 / 大數據 / PLM / ERP / SEO _ 版權所有 (c) 2017 廣州市德雲數科技有限公司">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -231,7 +231,9 @@
                                 </a>
                                 <p style="text-align:center;font-size:18px;">
                                     <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/ide/ideweb.html">
-                                         <b>4.4.8.72 build 20170929.230121</b>
+                                        <b>
+                                            4.4.8.72 build 20170929.230121
+                                        </b>
                                     </a>
                                 </p>
                                 <p style="text-align:center;font-family:'微软雅黑';font-size:13px;color:#7d7d7d;">
@@ -292,21 +294,13 @@
                     <div class="thumbnail" style="font-family:'微软雅黑';padding:2px 0;border:1px solid #fff;">
                         <p></p>
                         <p style="text-indent:2em;">
-                            <a target="_blank" href="http://dts.digitser.cn/zh-TW.html">
-                                <b>
-                                    廣州市德雲數科技有限公司
-                                </b>
-                            </a>
-                            為 "廣州市德數機械設備有限公司" 的 IT 事業部。
-                        </p>
-                        <p style="text-indent:2em;">
                             我們不但生産硬件，還生産軟件，能為您提供整套 "工業4.0" 成熟數字化解決方案。最大限度提高企業産品的全生命周期運轉效率，大幅降低運營成本，以自主創新突破您的想像。
                         </p>
                         <p style="text-indent:2em;">
                             在滿足
-                            <a target="_blank" href="http://www.digitser.net/zh-TW.html">
+                            <a target="_blank" href="http://www.digitser.cn/zh-TW.html">
                                 <b>
-                                    "廣州市德數機械設備有限公司"
+                                    "德雲社區"
                                 </b>
                             </a>
                             需求的同時，嚮外提供工業4.0數字化、IT、大數據、PLM、ERP、綜閤技術資訊、電氣自動化服務。
