--- a/base/en-US/about.html
+++ b/base/en-US/about.html
@@ -7,7 +7,7 @@
         <title>
             About
         </title>
-        <!-- version "0.9.0.1 build 20180227.011251" -->
+        <!-- version "0.9.0.2 build 20180227.014528" -->
         <meta name="keywords" content="Batch,Full text search,Manual translate,Industry 4.0,Big data,PLM,ERP,SEO">
         <meta name="description" content="Professional research and development, design, deployment, sales _ full digital enterprise management platform / high simulation digital prototype / batch / full text search / manual translation / industry 4.0 / big data / PLM / ERP / SEO _ Copyright (c) 2017 China Guangzhou Digits Cloud Technology Co., Ltd.">
         <link rel="icon" href="../images/favicon.png" type="image/png" />
@@ -252,9 +252,9 @@
                         </p>
                         <p style="text-indent:2em;">
                             Meet
-                            <a target="_blank" href="http://www.digitser.net/en-US.html">
+                            <a target="_blank" href="http://www.digitser.cn/en-US.html">
                                 <b>
-                                    "China Guangzhou Digitser Machinery Co., Ltd."
+                                    "Digits Cloud Community"
                                 </b>
                             </a>
                             needs at the same time, to provide industry 4.0 digital, IT, big data, PLM, ERP, comprehensive technical information, electrical automation services for others.
