--- a/base/zh-TW/about.html
+++ b/base/zh-TW/about.html
@@ -7,7 +7,7 @@
         <title>
             關於
         </title>
-        <!-- version "0.9.0.1 build 20180227.011054" -->
+        <!-- version "0.9.0.2 build 20180227.014643" -->
         <meta name="keywords" content="批處理,全文搜索,人工翻譯,工業4.0,大數據,PLM,ERP,SEO">
         <meta name="description" content="專業研發、設計、部署、銷售 _ 全數字化企業管理平颱 / 高仿真數字樣機 / 批處理 / 全文搜索 / 人工翻譯 / 工業4.0 / 大數據 / PLM / ERP / SEO _ 版權所有 (c) 2017 廣州市德雲數科技有限公司">
         <link rel="icon" href="../images/favicon.png" type="image/png" />
@@ -252,9 +252,9 @@
                         </p>
                         <p style="text-indent:2em;">
                             在滿足
-                            <a target="_blank" href="http://www.digitser.net/zh-TW.html">
+                            <a target="_blank" href="http://www.digitser.cn/zh-TW.html">
                                 <b>
-                                    "廣州市德數機械設備有限公司"
+                                    "德雲社區"
                                 </b>
                             </a>
                             需求的同時，嚮外提供工業4.0數字化、IT、大數據、PLM、ERP、綜閤技術資訊、電氣自動化服務。
