--- a/orange-red/zh-CN.html
+++ b/orange-red/zh-CN.html
@@ -9,7 +9,7 @@
             自适应手机-平板-PC
             橙红静态网站模板
         </title>
-        <!-- version "1.5.0.7 build 20180227.013701" -->
+        <!-- version "1.5.0.9 build 20180227.014734" -->
         <meta name="keywords" content="批处理,全文搜索,人工翻译,工业4.0,大数据,PLM,ERP,SEO">
         <meta name="description" content="专业研发、设计、部署、销售 _ 全数字化企业管理平台 / 高仿真数字样机 / 批处理 / 全文搜索 / 人工翻译 / 工业4.0 / 大数据 / PLM / ERP / SEO _ 版权所有 (c) 2017 广州市德云数科技有限公司">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -231,7 +231,9 @@
                                 </a>
                                 <p style="text-align:center;font-size:18px;">
                                     <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/ide/ideweb.html">
-                                         <b>4.4.8.72 build 20170929.230121</b>
+                                        <b>
+                                            4.4.8.72 build 20170929.230121
+                                        </b>
                                     </a>
                                 </p>
                                 <p style="text-align:center;font-family:'微软雅黑';font-size:13px;color:#7d7d7d;">
@@ -292,21 +294,13 @@
                     <div class="thumbnail" style="font-family:'微软雅黑';padding:2px 0;border:1px solid #fff;">
                         <p></p>
                         <p style="text-indent:2em;">
-                            <a target="_blank" href="http://dts.digitser.cn/zh-CN.html">
-                                <b>
-                                    广州市德云数科技有限公司
-                                </b>
-                            </a>
-                            为 "广州市德数机械设备有限公司" 的 IT 事业部。
-                        </p>
-                        <p style="text-indent:2em;">
                             我们不但生产硬件，还生产软件，能为您提供整套 "工业4.0" 成熟数字化解决方案。最大限度提高企业产品的全生命周期运转效率，大幅降低运营成本，以自主创新突破您的想像。
                         </p>
                         <p style="text-indent:2em;">
                             在满足
-                            <a target="_blank" href="http://www.digitser.net/zh-CN.html">
+                            <a target="_blank" href="http://www.digitser.cn/zh-CN.html">
                                 <b>
-                                    "广州市德数机械设备有限公司"
+                                    "德云社区"
                                 </b>
                             </a>
                             需求的同时，向外提供工业4.0数字化、IT、大数据、PLM、ERP、综合技术资讯、电气自动化服务。
