--- a/orange-red/en-US/about.html
+++ b/orange-red/en-US/about.html
@@ -7,7 +7,7 @@
         <title>
             About
         </title>
-        <!-- version "0.9.0.3 build 20180227.014909" -->
+        <!-- version "0.9.0.10 build 20180227.020800" -->
         <meta name="keywords" content="Batch,Full text search,Manual translate,Industry 4.0,Big data,PLM,ERP,SEO">
         <meta name="description" content="Professional research and development, design, deployment, sales _ full digital enterprise management platform / high simulation digital prototype / batch / full text search / manual translation / industry 4.0 / big data / PLM / ERP / SEO _ Copyright (c) 2017 China Guangzhou Digits Cloud Technology Co., Ltd.">
         <link rel="icon" href="../images/favicon.png" type="image/png" />
@@ -25,27 +25,24 @@
         <div class="navbar navbar-default navbar-static-top" style="font-family:'微软雅黑';background:#ff552d;">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-9">
-                        <a href="http://dts.digitser.cn/">
-                            <img src="../images/logo.png" class="img-responsive" style="max-height:105px;"
-                            alt="China Guangzhou Digits Cloud Technology Co., Ltd. Log" title="Click here to enter the official website home page">
+                    <div class="col-md-8">
+                        <a href="http://dts.digitser.cn/en-US.html">
+                            <img class="img-responsive" src="../images/logo.png" style="min-width:208px;"
+                            alt="Digits Cloud Community Log" title="Click here to enter the official website home page">
                         </a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-9"></div>
-                    <div class="col-md-3">
-                        <div class="row">
-                            <a class="btn btn-primary" target="_blank" style="font-size:12px;color:#5b5b5b;text-align:center;width:90px;margin-top:0px;background:#ff552d;border:0px;border-radius:3px;" href="http://data.digitser.cn/en-US.html">
-                                Data
-                            </a>
-                            <a class="btn btn-primary" style="font-size:12px;color:#5b5b5b;text-align:center;width:90px;margin-top:0px;background:#ff552d;border:0px;border-radius:3px;" href="##">
-                                Register
-                            </a>
-                            <a class="btn btn-primary" style="font-size:12px;color:#5b5b5b;text-align:center;width:90px;margin-top:0px;background:#ff552d;border:0px;border-radius:3px;" href="##">
-                                Sign in
-                            </a>
-                        </div>
+                    <div class="col-md-4" style="padding-top:8px;text-align:right;">
+                        <a target="_blank" href="https://pan.baidu.com/s/1dGxcM7R" style="color:#655753;">
+                            Baidu Network Disk
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="##" style="color:#655753;">
+                            Register
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="##" style="color:#655753;">
+                            Sign In
+                        </a>
                     </div>
                 </div>
                 <div class="row">
@@ -53,14 +50,14 @@
                         <div class="row">
                             <ul class="nav nav-pills navbar-left">
                                 <li>
-                                    <a href="../index.html" style="color:#444444;">
+                                    <a href="../en-US.html" style="color:#444;">
                                         <b>
                                             Home
                                         </b>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="about.html" style="color:#444444;">
+                                    <a href="about.html" style="color:#444;">
                                         <b>
                                             About
                                         </b>
@@ -69,10 +66,10 @@
                                 <li>
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" style="background:#ff552d;color:#398fc8;border:0px;border-radius:3px;height:40px;">
-                                            <b style="color:#444444;">
+                                            <b style="color:#444;">
                                                 Products
                                             </b>
-                                            <span class="caret" style="color:#444444;"></span>
+                                            <span class="caret" style="color:#444;"></span>
                                         </button>
                                         <ul class="dropdown-menu" role="menu">
                                             <li>
@@ -163,35 +160,35 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <a target="_blank" href="http://dts.digitser.cn/en-US/download/index.html" style="color:#444444;">
+                                    <a target="_blank" href="http://dts.digitser.cn/en-US/download/index.html" style="color:#444;">
                                         <b>
                                             Download
                                         </b>
                                     </a>
                                 </li>
                                 <li>
-                                    <a target="_blank" href="http://dts.digitser.cn/en-US/service.html" style="color:#444444;">
+                                    <a target="_blank" href="http://dts.digitser.cn/en-US/service.html" style="color:#444;">
                                         <b>
                                             Services
                                         </b>
                                     </a>
                                 </li>
                                 <li>
-                                    <a target="_blank" href="http://dts.digitser.cn/en-US/culture.html" style="color:#444444;">
+                                    <a target="_blank" href="http://dts.digitser.cn/en-US/culture.html" style="color:#444;">
                                         <b>
                                             Culture
                                         </b>
                                     </a>
                                 </li>
                                 <li>
-                                    <a target="_blank" href="http://dts.digitser.cn/en-US/recruitment.html" style="color:#444444;">
+                                    <a target="_blank" href="http://dts.digitser.cn/en-US/recruitment.html" style="color:#444;">
                                         <b>
                                             Recruitment
                                         </b>
                                     </a>
                                 </li>
                                 <li>
-                                    <a target="_blank" href="http://dts.digitser.cn/en-US/contact.html" style="color:#444444;">
+                                    <a target="_blank" href="http://dts.digitser.cn/en-US/contact.html" style="color:#444;">
                                         <b>
                                             Contact
                                         </b>
@@ -200,18 +197,18 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="row">
-                            <a class="btn btn-primary" target="_blank" style="color:#5b5b5b;text-align:center;width:90px;margin-top:5px;background:#ff552d;border:0px;border-radius:3px;" href="../index.html">
-                                简体中文
-                            </a>
-                            <a class="btn btn-primary" target="_blank" style="color:#5b5b5b;text-align:center;width:90px;margin-top:5px;background:#ff552d;border:0px;border-radius:3px;" href="../zh-TW.html">
-                                繁體中文
-                            </a>
-                            <a class="btn btn-primary" target="_blank" style="color:#5b5b5b;text-align:center;width:90px;margin-top:5px;background:#ff552d;border:0px;border-radius:3px;" href="../en-US.html">
-                                English
-                            </a>
-                        </div>
+                    <div class="col-md-3" style="padding-top:10px;text-align:right;">
+                        <a target="_blank" href="../zh-CN.html" style="color:#5b5b5b;">
+                            简体中文
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a target="_blank" href="../zh-TW.html" style="color:#5b5b5b;">
+                            繁體中文
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a target="_blank" href="../en-US.html" style="color:#5b5b5b;">
+                            English
+                        </a>
                     </div>
                 </div>
             </div>
@@ -219,7 +216,7 @@
         <div class="container">
             <ol class="breadcrumb">
                 <li>
-                    <a href="../index.html">
+                    <a href="../en-US.html">
                         Home
                     </a>
                 </li>
@@ -239,14 +236,6 @@
                     <hr style="margin:0;border:0;border-top:1px dashed #eee;">
                     <p></p>
                     <div class="thumbnail" style="font-family:'微软雅黑';padding:2px 0;border:1px solid #fff;">
-                        <p style="text-indent:2em;">
-                            <a target="_blank" href="http://dts.digitser.cn/en-US.html">
-                                <b>
-                                    China Guangzhou Digits Cloud Technology Co., Ltd.
-                                </b>
-                            </a>
-                            is "China Guangzhou Digitser Machinery Co., Ltd." IT Division.
-                        </p>
                         <p style="text-indent:2em;">
                             We not only produce hardware, but also produce software, can provide you with the complete "Industry 4.0" mature digital solutions. Maximize the efficiency of the full life cycle of enterprise products, significantly reduce operating costs, breaking your imagination with independent innovation.
                         </p>
@@ -379,56 +368,56 @@
                             <div class="row">
                                 <ul class="nav nav-pills navbar-left">
                                     <li>
-                                        <a href="../index.html" style="color:#444444;">
+                                        <a href="../en-US.html" style="color:#444;">
                                             <b>
                                                 Home
                                             </b>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="about.html" style="color:#444444;">
+                                        <a href="about.html" style="color:#444;">
                                             <b>
                                                 About
                                             </b>
                                         </a>
                                     </li>
                                     <li>
-                                        <a target="_blank" href="http://dts.digitser.cn/en-US/product/index.html" style="color:#444444;">
+                                        <a target="_blank" href="http://dts.digitser.cn/en-US/product/index.html" style="color:#444;">
                                             <b>
                                                 Products
                                             </b>
                                         </a>
                                     </li>
                                     <li>
-                                        <a target="_blank" href="http://dts.digitser.cn/en-US/download/index.html" style="color:#444444;">
+                                        <a target="_blank" href="http://dts.digitser.cn/en-US/download/index.html" style="color:#444;">
                                             <b>
                                                 Download
                                             </b>
                                         </a>
                                     </li>
                                     <li>
-                                        <a target="_blank" href="http://dts.digitser.cn/en-US/service.html" style="color:#444444;">
+                                        <a target="_blank" href="http://dts.digitser.cn/en-US/service.html" style="color:#444;">
                                             <b>
                                                 Services
                                             </b>
                                         </a>
                                     </li>
                                     <li>
-                                        <a target="_blank" href="http://dts.digitser.cn/en-US/culture.html" style="color:#444444;">
+                                        <a target="_blank" href="http://dts.digitser.cn/en-US/culture.html" style="color:#444;">
                                             <b>
                                                 Culture
                                             </b>
                                         </a>
                                     </li>
                                     <li>
-                                        <a target="_blank" href="http://dts.digitser.cn/en-US/recruitment.html" style="color:#444444;">
+                                        <a target="_blank" href="http://dts.digitser.cn/en-US/recruitment.html" style="color:#444;">
                                             <b>
                                                 Recruitment
                                             </b>
                                         </a>
                                     </li>
                                     <li>
-                                        <a target="_blank" href="http://dts.digitser.cn/en-US/contact.html" style="color:#444444;">
+                                        <a target="_blank" href="http://dts.digitser.cn/en-US/contact.html" style="color:#444;">
                                             <b>
                                                 Contact
                                             </b>
