--- a/base/en-US/about.html
+++ b/base/en-US/about.html
@@ -7,7 +7,7 @@
         <title>
             About
         </title>
-        <!-- version "0.9.0.3 build 20180227.014909" -->
+        <!-- version "0.9.0.5 build 20180227.020800" -->
         <meta name="keywords" content="Batch,Full text search,Manual translate,Industry 4.0,Big data,PLM,ERP,SEO">
         <meta name="description" content="Professional research and development, design, deployment, sales _ full digital enterprise management platform / high simulation digital prototype / batch / full text search / manual translation / industry 4.0 / big data / PLM / ERP / SEO _ Copyright (c) 2017 China Guangzhou Digits Cloud Technology Co., Ltd.">
         <link rel="icon" href="../images/favicon.png" type="image/png" />
@@ -219,7 +219,7 @@
         <div class="container">
             <ol class="breadcrumb">
                 <li>
-                    <a href="../index.html">
+                    <a href="../en-US.html">
                         Home
                     </a>
                 </li>
@@ -239,14 +239,6 @@
                     <hr style="margin:0;border:0;border-top:1px dashed #eee;">
                     <p></p>
                     <div class="thumbnail" style="font-family:'微软雅黑';padding:2px 0;border:1px solid #fff;">
-                        <p style="text-indent:2em;">
-                            <a target="_blank" href="http://dts.digitser.cn/en-US.html">
-                                <b>
-                                    China Guangzhou Digits Cloud Technology Co., Ltd.
-                                </b>
-                            </a>
-                            is "China Guangzhou Digitser Machinery Co., Ltd." IT Division.
-                        </p>
                         <p style="text-indent:2em;">
                             We not only produce hardware, but also produce software, can provide you with the complete "Industry 4.0" mature digital solutions. Maximize the efficiency of the full life cycle of enterprise products, significantly reduce operating costs, breaking your imagination with independent innovation.
                         </p>
