--- a/base/zh-TW/about.html
+++ b/base/zh-TW/about.html
@@ -7,7 +7,7 @@
         <title>
             關於
         </title>
-        <!-- version "0.9.0.3 build 20180227.014853" -->
+        <!-- version "0.9.0.5 build 20180227.020448" -->
         <meta name="keywords" content="批處理,全文搜索,人工翻譯,工業4.0,大數據,PLM,ERP,SEO">
         <meta name="description" content="專業研發、設計、部署、銷售 _ 全數字化企業管理平颱 / 高仿真數字樣機 / 批處理 / 全文搜索 / 人工翻譯 / 工業4.0 / 大數據 / PLM / ERP / SEO _ 版權所有 (c) 2017 廣州市德雲數科技有限公司">
         <link rel="icon" href="../images/favicon.png" type="image/png" />
@@ -219,7 +219,7 @@
         <div class="container">
             <ol class="breadcrumb">
                 <li>
-                    <a href="../index.html">
+                    <a href="../zh-TW.html">
                         首頁
                     </a>
                 </li>
@@ -239,14 +239,6 @@
                     <hr style="margin:0;border:0;border-top:1px dashed #eee;">
                     <p></p>
                     <div class="thumbnail" style="font-family:'微软雅黑';padding:2px 0;border:1px solid #fff;">
-                        <p style="text-indent:2em;">
-                            <a target="_blank" href="http://dts.digitser.cn/zh-TW.html">
-                                <b>
-                                    廣州市德雲數科技有限公司
-                                </b>
-                            </a>
-                            為 "廣州市德數機械設備有限公司" 的 IT 事業部。
-                        </p>
                         <p style="text-indent:2em;">
                             我們不但生産硬件，還生産軟件，能為您提供整套 "工業4.0" 成熟數字化解決方案。最大限度提高企業産品的全生命周期運轉效率，大幅降低運營成本，以自主創新突破您的想像。
                         </p>
