--- a/orange-red/zh-CN/about.html
+++ b/orange-red/zh-CN/about.html
@@ -7,7 +7,7 @@
         <title>
             关于
         </title>
-        <!-- version "0.9.0.2 build 20180227.014827" -->
+        <!-- version "0.9.0.9 build 20180227.020633" -->
         <meta name="keywords" content="批处理,全文搜索,人工翻译,工业4.0,大数据,PLM,ERP,SEO">
         <meta name="description" content="专业研发、设计、部署、销售 _ 全数字化企业管理平台 / 高仿真数字样机 / 批处理 / 全文搜索 / 人工翻译 / 工业4.0 / 大数据 / PLM / ERP / SEO _ 版权所有 (c) 2017 广州市德云数科技有限公司">
         <link rel="icon" href="../images/favicon.png" type="image/png" />
@@ -25,27 +25,24 @@
         <div class="navbar navbar-default navbar-static-top" style="font-family:'微软雅黑';background:#ff552d;">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-9">
-                        <a href="http://dts.digitser.cn/">
-                            <img src="../images/logo.png" class="img-responsive" style="max-height:105px;"
-                            alt="广州市德云数科技有限公司 Log" title="点这里进入官网首页">
+                    <div class="col-md-8">
+                        <a target="_blank" href="http://dts.digitser.cn/zh-CN.html">
+                            <img class="img-responsive" src="../images/logo.png" style="min-width:208px;"
+                            alt="德云社区 Log" title="点这里进入官网首页">
                         </a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-9"></div>
-                    <div class="col-md-3">
-                        <div class="row">
-                            <a class="btn btn-primary" target="_blank" style="font-size:12px;color:#5b5b5b;text-align:center;width:90px;margin-top:0px;background:#ff552d;border:0px;border-radius:3px;" href="http://data.digitser.cn/zh-CN.html">
-                                数据资料
-                            </a>
-                            <a class="btn btn-primary" style="font-size:12px;color:#5b5b5b;text-align:center;width:90px;margin-top:0px;background:#ff552d;border:0px;border-radius:3px;" href="##">
-                                注册
-                            </a>
-                            <a class="btn btn-primary" style="font-size:12px;color:#5b5b5b;text-align:center;width:90px;margin-top:0px;background:#ff552d;border:0px;border-radius:3px;" href="##">
-                                登录
-                            </a>
-                        </div>
+                    <div class="col-md-4" style="padding-top:8px;text-align:right;">
+                        <a target="_blank" href="https://pan.baidu.com/s/1dGxcM7R" style="color:#655753;">
+                            百度网盘
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="##" style="color:#655753;">
+                            注册
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="##" style="color:#655753;">
+                            登录
+                        </a>
                     </div>
                 </div>
                 <div class="row">
@@ -53,14 +50,14 @@
                         <div class="row">
                             <ul class="nav nav-pills navbar-left">
                                 <li>
-                                    <a href="../index.html" style="color:#444444;">
+                                    <a href="../zh-CN.html" style="color:#444;">
                                         <b>
                                             首页
                                         </b>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="about.html" style="color:#444444;">
+                                    <a href="about.html" style="color:#444;">
                                         <b>
                                             关于
                                         </b>
@@ -69,10 +66,10 @@
                                 <li>
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" style="background:#ff552d;color:#398fc8;border:0px;border-radius:3px;height:40px;">
-                                            <b style="color:#444444;">
+                                            <b style="color:#444;">
                                                 产品
                                             </b>
-                                            <span class="caret" style="color:#444444;"></span>
+                                            <span class="caret" style="color:#444;"></span>
                                         </button>
                                         <ul class="dropdown-menu" role="menu">
                                             <li>
@@ -163,35 +160,35 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <a target="_blank" href="http://dts.digitser.cn/zh-CN/download/index.html" style="color:#444444;">
+                                    <a target="_blank" href="http://dts.digitser.cn/zh-CN/download/index.html" style="color:#444;">
                                         <b>
                                             下载
                                         </b>
                                     </a>
                                 </li>
                                 <li>
-                                    <a target="_blank" href="http://dts.digitser.cn/zh-CN/service.html" style="color:#444444;">
+                                    <a target="_blank" href="http://dts.digitser.cn/zh-CN/service.html" style="color:#444;">
                                         <b>
                                             服务
                                         </b>
                                     </a>
                                 </li>
                                 <li>
-                                    <a target="_blank" href="http://dts.digitser.cn/zh-CN/culture.html" style="color:#444444;">
+                                    <a target="_blank" href="http://dts.digitser.cn/zh-CN/culture.html" style="color:#444;">
                                         <b>
                                             文化
                                         </b>
                                     </a>
                                 </li>
                                 <li>
-                                    <a target="_blank" href="http://dts.digitser.cn/zh-CN/recruitment.html" style="color:#444444;">
+                                    <a target="_blank" href="http://dts.digitser.cn/zh-CN/recruitment.html" style="color:#444;">
                                         <b>
                                             招聘
                                         </b>
                                     </a>
                                 </li>
                                 <li>
-                                    <a target="_blank" href="http://dts.digitser.cn/zh-CN/contact.html" style="color:#444444;">
+                                    <a target="_blank" href="http://dts.digitser.cn/zh-CN/contact.html" style="color:#444;">
                                         <b>
                                             联络
                                         </b>
@@ -200,18 +197,18 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="row">
-                            <a class="btn btn-primary" target="_blank" style="color:#5b5b5b;text-align:center;width:90px;margin-top:5px;background:#ff552d;border:0px;border-radius:3px;" href="../index.html">
-                                简体中文
-                            </a>
-                            <a class="btn btn-primary" target="_blank" style="color:#5b5b5b;text-align:center;width:90px;margin-top:5px;background:#ff552d;border:0px;border-radius:3px;" href="../zh-TW.html">
-                                繁體中文
-                            </a>
-                            <a class="btn btn-primary" target="_blank" style="color:#5b5b5b;text-align:center;width:90px;margin-top:5px;background:#ff552d;border:0px;border-radius:3px;" href="../en-US.html">
-                                English
-                            </a>
-                        </div>
+                    <div class="col-md-3" style="padding-top:10px;text-align:right;">
+                        <a target="_blank" href="../zh-CN.html" style="color:#5b5b5b;">
+                            简体中文
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a target="_blank" href="../zh-TW.html" style="color:#5b5b5b;">
+                            繁體中文
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a target="_blank" href="../en-US.html" style="color:#5b5b5b;">
+                            English
+                        </a>
                     </div>
                 </div>
             </div>
@@ -219,7 +216,7 @@
         <div class="container">
             <ol class="breadcrumb">
                 <li>
-                    <a href="../index.html">
+                    <a href="../zh-CN.html">
                         首页
                     </a>
                 </li>
@@ -240,21 +237,13 @@
                     <p></p>
                     <div class="thumbnail" style="font-family:'微软雅黑';padding:2px 0;border:1px solid #fff;">
                         <p style="text-indent:2em;">
-                            <a target="_blank" href="http://dts.digitser.cn/zh-CN.html">
-                                <b>
-                                    广州市德云数科技有限公司
-                                </b>
-                            </a>
-                            为 "广州市德数机械设备有限公司" 的 IT 事业部。
-                        </p>
-                        <p style="text-indent:2em;">
                             我们不但生产硬件，还生产软件，能为您提供整套 "工业4.0" 成熟数字化解决方案。最大限度提高企业产品的全生命周期运转效率，大幅降低运营成本，以自主创新突破您的想像。
                         </p>
                         <p style="text-indent:2em;">
                             在满足
-                            <a target="_blank" href="http://www.digitser.net/zh-CN.html">
+                            <a target="_blank" href="http://www.digitser.cn/zh-CN.html">
                                 <b>
-                                    "广州市德数机械设备有限公司"
+                                    "德云社区"
                                 </b>
                             </a>
                             需求的同时，向外提供工业4.0数字化、IT、大数据、PLM、ERP、综合技术资讯、电气自动化服务。
@@ -379,56 +368,56 @@
                             <div class="row">
                                 <ul class="nav nav-pills navbar-left">
                                     <li>
-                                        <a href="../index.html" style="color:#444444;">
+                                        <a href="../zh-CN.html" style="color:#444;">
                                             <b>
                                                 首页
                                             </b>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="about.html" style="color:#444444;">
+                                        <a href="about.html" style="color:#444;">
                                             <b>
                                                 关于
                                             </b>
                                         </a>
                                     </li>
                                     <li>
-                                        <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/index.html" style="color:#444444;">
+                                        <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/index.html" style="color:#444;">
                                             <b>
                                                 产品
                                             </b>
                                         </a>
                                     </li>
                                     <li>
-                                        <a target="_blank" href="http://dts.digitser.cn/zh-CN/download/index.html" style="color:#444444;">
+                                        <a target="_blank" href="http://dts.digitser.cn/zh-CN/download/index.html" style="color:#444;">
                                             <b>
                                                 下载
                                             </b>
                                         </a>
                                     </li>
                                     <li>
-                                        <a target="_blank" href="http://dts.digitser.cn/zh-CN/service.html" style="color:#444444;">
+                                        <a target="_blank" href="http://dts.digitser.cn/zh-CN/service.html" style="color:#444;">
                                             <b>
                                                 服务
                                             </b>
                                         </a>
                                     </li>
                                     <li>
-                                        <a target="_blank" href="http://dts.digitser.cn/zh-CN/culture.html" style="color:#444444;">
+                                        <a target="_blank" href="http://dts.digitser.cn/zh-CN/culture.html" style="color:#444;">
                                             <b>
                                                 文化
                                             </b>
                                         </a>
                                     </li>
                                     <li>
-                                        <a target="_blank" href="http://dts.digitser.cn/zh-CN/recruitment.html" style="color:#444444;">
+                                        <a target="_blank" href="http://dts.digitser.cn/zh-CN/recruitment.html" style="color:#444;">
                                             <b>
                                                 招聘
                                             </b>
                                         </a>
                                     </li>
                                     <li>
-                                        <a target="_blank" href="http://dts.digitser.cn/zh-CN/contact.html" style="color:#444444;">
+                                        <a target="_blank" href="http://dts.digitser.cn/zh-CN/contact.html" style="color:#444;">
                                             <b>
                                                 联络
                                             </b>
