--- a/orange-red/zh-TW/about.html
+++ b/orange-red/zh-TW/about.html
@@ -7,7 +7,7 @@
         <title>
             關於
         </title>
-        <!-- version "0.9.0.3 build 20180227.014853" -->
+        <!-- version "0.9.0.10 build 20180227.020540" -->
         <meta name="keywords" content="批處理,全文搜索,人工翻譯,工業4.0,大數據,PLM,ERP,SEO">
         <meta name="description" content="專業研發、設計、部署、銷售 _ 全數字化企業管理平颱 / 高仿真數字樣機 / 批處理 / 全文搜索 / 人工翻譯 / 工業4.0 / 大數據 / PLM / ERP / SEO _ 版權所有 (c) 2017 廣州市德雲數科技有限公司">
         <link rel="icon" href="../images/favicon.png" type="image/png" />
@@ -25,27 +25,24 @@
         <div class="navbar navbar-default navbar-static-top" style="font-family:'微软雅黑';background:#ff552d;">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-9">
-                        <a href="http://dts.digitser.cn/">
-                            <img src="../images/logo.png" class="img-responsive" style="max-height:105px;"
-                            alt="廣州市德雲數科技有限公司 Log" title="點這裏進入官網首頁">
+                    <div class="col-md-8">
+                        <a target="_blank" href="http://dts.digitser.cn/zh-TW.html">
+                            <img class="img-responsive" src="../images/logo.png" style="min-width:208px;"
+                            alt="德雲社區 Log" title="點這裏進入官網首頁">
                         </a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-9"></div>
-                    <div class="col-md-3">
-                        <div class="row">
-                            <a class="btn btn-primary" target="_blank" style="font-size:12px;color:#5b5b5b;text-align:center;width:90px;margin-top:0px;background:#ff552d;border:0px;border-radius:3px;" href="http://data.digitser.cn/zh-TW.html">
-                                數據資料
-                            </a>
-                            <a class="btn btn-primary" style="font-size:12px;color:#5b5b5b;text-align:center;width:90px;margin-top:0px;background:#ff552d;border:0px;border-radius:3px;" href="##">
-                                注冊
-                            </a>
-                            <a class="btn btn-primary" style="font-size:12px;color:#5b5b5b;text-align:center;width:90px;margin-top:0px;background:#ff552d;border:0px;border-radius:3px;" href="##">
-                                登錄
-                            </a>
-                        </div>
+                    <div class="col-md-4" style="padding-top:8px;text-align:right;">
+                        <a target="_blank" href="https://pan.baidu.com/s/1dGxcM7R" style="color:#655753;">
+                            百度網盤
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="##" style="color:#655753;">
+                            注冊
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="##" style="color:#655753;">
+                            登錄
+                        </a>
                     </div>
                 </div>
                 <div class="row">
@@ -53,14 +50,14 @@
                         <div class="row">
                             <ul class="nav nav-pills navbar-left">
                                 <li>
-                                    <a href="../index.html" style="color:#444444;">
+                                    <a href="../zh-TW.html" style="color:#444;">
                                         <b>
                                             首頁
                                         </b>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="about.html" style="color:#444444;">
+                                    <a href="about.html" style="color:#444;">
                                         <b>
                                             關於
                                         </b>
@@ -69,10 +66,10 @@
                                 <li>
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" style="background:#ff552d;color:#398fc8;border:0px;border-radius:3px;height:40px;">
-                                            <b style="color:#444444;">
+                                            <b style="color:#444;">
                                                 産品
                                             </b>
-                                            <span class="caret" style="color:#444444;"></span>
+                                            <span class="caret" style="color:#444;"></span>
                                         </button>
                                         <ul class="dropdown-menu" role="menu">
                                             <li>
@@ -163,35 +160,35 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <a target="_blank" href="http://dts.digitser.cn/zh-TW/download/index.html" style="color:#444444;">
+                                    <a target="_blank" href="http://dts.digitser.cn/zh-TW/download/index.html" style="color:#444;">
                                         <b>
                                             下載
                                         </b>
                                     </a>
                                 </li>
                                 <li>
-                                    <a target="_blank" href="http://dts.digitser.cn/zh-TW/service.html" style="color:#444444;">
+                                    <a target="_blank" href="http://dts.digitser.cn/zh-TW/service.html" style="color:#444;">
                                         <b>
                                             服務
                                         </b>
                                     </a>
                                 </li>
                                 <li>
-                                    <a target="_blank" href="http://dts.digitser.cn/zh-TW/culture.html" style="color:#444444;">
+                                    <a target="_blank" href="http://dts.digitser.cn/zh-TW/culture.html" style="color:#444;">
                                         <b>
                                             文化
                                         </b>
                                     </a>
                                 </li>
                                 <li>
-                                    <a target="_blank" href="http://dts.digitser.cn/zh-TW/recruitment.html" style="color:#444444;">
+                                    <a target="_blank" href="http://dts.digitser.cn/zh-TW/recruitment.html" style="color:#444;">
                                         <b>
                                             招聘
                                         </b>
                                     </a>
                                 </li>
                                 <li>
-                                    <a target="_blank" href="http://dts.digitser.cn/zh-TW/contact.html" style="color:#444444;">
+                                    <a target="_blank" href="http://dts.digitser.cn/zh-TW/contact.html" style="color:#444;">
                                         <b>
                                             聯絡
                                         </b>
@@ -200,18 +197,18 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="row">
-                            <a class="btn btn-primary" target="_blank" style="color:#5b5b5b;text-align:center;width:90px;margin-top:5px;background:#ff552d;border:0px;border-radius:3px;" href="../index.html">
-                                简体中文
-                            </a>
-                            <a class="btn btn-primary" target="_blank" style="color:#5b5b5b;text-align:center;width:90px;margin-top:5px;background:#ff552d;border:0px;border-radius:3px;" href="../zh-TW.html">
-                                繁體中文
-                            </a>
-                            <a class="btn btn-primary" target="_blank" style="color:#5b5b5b;text-align:center;width:90px;margin-top:5px;background:#ff552d;border:0px;border-radius:3px;" href="../en-US.html">
-                                English
-                            </a>
-                        </div>
+                    <div class="col-md-3" style="padding-top:10px;text-align:right;">
+                        <a target="_blank" href="../zh-CN.html" style="color:#5b5b5b;">
+                            简体中文
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a target="_blank" href="../zh-TW.html" style="color:#5b5b5b;">
+                            繁體中文
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a target="_blank" href="../en-US.html" style="color:#5b5b5b;">
+                            English
+                        </a>
                     </div>
                 </div>
             </div>
@@ -219,7 +216,7 @@
         <div class="container">
             <ol class="breadcrumb">
                 <li>
-                    <a href="../index.html">
+                    <a href="../zh-TW.html">
                         首頁
                     </a>
                 </li>
@@ -239,14 +236,6 @@
                     <hr style="margin:0;border:0;border-top:1px dashed #eee;">
                     <p></p>
                     <div class="thumbnail" style="font-family:'微软雅黑';padding:2px 0;border:1px solid #fff;">
-                        <p style="text-indent:2em;">
-                            <a target="_blank" href="http://dts.digitser.cn/zh-TW.html">
-                                <b>
-                                    廣州市德雲數科技有限公司
-                                </b>
-                            </a>
-                            為 "廣州市德數機械設備有限公司" 的 IT 事業部。
-                        </p>
                         <p style="text-indent:2em;">
                             我們不但生産硬件，還生産軟件，能為您提供整套 "工業4.0" 成熟數字化解決方案。最大限度提高企業産品的全生命周期運轉效率，大幅降低運營成本，以自主創新突破您的想像。
                         </p>
@@ -379,56 +368,56 @@
                             <div class="row">
                                 <ul class="nav nav-pills navbar-left">
                                     <li>
-                                        <a href="../index.html" style="color:#444444;">
+                                        <a href="../zh-TW.html" style="color:#444;">
                                             <b>
                                                 首頁
                                             </b>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="about.html" style="color:#444444;">
+                                        <a href="about.html" style="color:#444;">
                                             <b>
                                                 關於
                                             </b>
                                         </a>
                                     </li>
                                     <li>
-                                        <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/index.html" style="color:#444444;">
+                                        <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/index.html" style="color:#444;">
                                             <b>
                                                 産品
                                             </b>
                                         </a>
                                     </li>
                                     <li>
-                                        <a target="_blank" href="http://dts.digitser.cn/zh-TW/download/index.html" style="color:#444444;">
+                                        <a target="_blank" href="http://dts.digitser.cn/zh-TW/download/index.html" style="color:#444;">
                                             <b>
                                                 下載
                                             </b>
                                         </a>
                                     </li>
                                     <li>
-                                        <a target="_blank" href="http://dts.digitser.cn/zh-TW/service.html" style="color:#444444;">
+                                        <a target="_blank" href="http://dts.digitser.cn/zh-TW/service.html" style="color:#444;">
                                             <b>
                                                 服務
                                             </b>
                                         </a>
                                     </li>
                                     <li>
-                                        <a target="_blank" href="http://dts.digitser.cn/zh-TW/culture.html" style="color:#444444;">
+                                        <a target="_blank" href="http://dts.digitser.cn/zh-TW/culture.html" style="color:#444;">
                                             <b>
                                                 文化
                                             </b>
                                         </a>
                                     </li>
                                     <li>
-                                        <a target="_blank" href="http://dts.digitser.cn/zh-TW/recruitment.html" style="color:#444444;">
+                                        <a target="_blank" href="http://dts.digitser.cn/zh-TW/recruitment.html" style="color:#444;">
                                             <b>
                                                 招聘
                                             </b>
                                         </a>
                                     </li>
                                     <li>
-                                        <a target="_blank" href="http://dts.digitser.cn/zh-TW/contact.html" style="color:#444444;">
+                                        <a target="_blank" href="http://dts.digitser.cn/zh-TW/contact.html" style="color:#444;">
                                             <b>
                                                 聯絡
                                             </b>
